@@ -1,0 +1,7 @@
+set noparent
+filter=-whitespace/tab
+filter=-whitespace/parens
+filter=-whitespace/line_length
+filter=-readability/streams
+exclude_files=config\.h
+exclude_files=confdefs\.h
